--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -22,4 +22,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY=${{ steps.tmpCreds.outputs.aws_secret_access_key }} \
           AWS_SESSION_TOKEN=${{ steps.tmpCreds.outputs.aws_session_token }} \
           AWS_DEFAULT_REGION=us-west-2 \
-          sts get-caller-identity
+          aws sts get-caller-identity
